# StudyCpp

./: README.md
Android/: .gitignore  build.gradle
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: continents.cpp  pathManager.cpp  pathManager.h
Android/app/src/main/cpp/contract/: LogContract.cpp  LogUseCase.cpp  PathContract.cpp
Android/app/src/main/cpp/view/: AndroidContinentsView.cpp  AndroidContinentsView.h
Android/app/src/main/java/ademar/cppstudy/: App.kt  ContinentsActivity.kt  InstallDatabase.kt  MainActivity.kt  PathManager.kt
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/ademar/cppstudy/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Core/: player.h
Core/contract/: LogContract.h  LogUseCase.h  PathContract.h
Core/interactor/: GetContinentsUseCase.cpp  GetContinentsUseCase.h
Core/model/: continent.h  player.h
Core/presenter/: ContinentsPresenter.cpp  ContinentsPresenter.h
Core/repository/: ContinentRepository.cpp  ContinentRepository.h
Core/repository/datasource/: ContinentRepositoryCache.h  ContinentRepositoryLocal.cpp  ContinentRepositoryLocal.h
Core/sqlite/: README.md
Core/view/: ContinentsView.h
Database/: README.md  createDatabases.sh  input.sql
Unix/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
Unix/contract/: LogContract.cpp  LogUseCase.cpp  PathContract.cpp
Unix/view/: UnixContinentsView.cpp  UnixContinentsView.h
